# openai-api-convertor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
.claude/: settings.local.json
admin_portal/: Dockerfile
admin_portal/backend/: __init__.py  main.py
admin_portal/backend/api/: __init__.py  api_keys.py  auth.py  dashboard.py  pricing.py
admin_portal/backend/middleware/: __init__.py  cognito_auth.py
admin_portal/backend/schemas/: api_key.py  dashboard.py  model_mapping.py  pricing.py
admin_portal/frontend/: index.html  package.json  vite.config.ts
admin_portal/frontend/src/: App.tsx
admin_portal/frontend/src/components/: Layout.tsx
admin_portal/frontend/src/i18n/: en.json  zh.json
admin_portal/frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  (+2 more)
app/: __init__.py  main.py
app/api/: chat.py  health.py  models.py
app/converters/: __init__.py  bedrock_to_openai.py  openai_to_bedrock.py
app/core/: config.py  exceptions.py
app/db/: __init__.py  dynamodb.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/schemas/: __init__.py  openai.py
app/services/: __init__.py  bedrock_service.py
cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
cdk/config/: config.ts
cdk/lib/: cognito-stack.ts  dynamodb-stack.ts  ecs-stack.ts  network-stack.ts
cdk/scripts/: deploy.sh
docs/: FEATURE_STRUCTURED_OUTPUT_STREAM_USAGE_REASONING.md  REQUIREMENTS.md
scripts/: create-admin-user.sh  create_api_key.py  deploy.sh  ec2_setup.sh  seed_pricing.py  setup_tables.py
tests/: test_api.sh  test_runner.py
(+3 files in other folders)
